<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
	     https://maven.apache.org/xsd/maven-4.0.0.xsd">


	<modelVersion>4.0.0</modelVersion>

    <!-- ===== PARENT ===== -->
    <!-- Spring Boot parent manages dependency versions and plugin defaults -->
    <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/>
	</parent>

    <!-- ===== PROJECT IDENTITY ===== -->
    <groupId>com.peddannat.ecommerce</groupId>
	<artifactId>product-service</artifactId>
	<version>1.0.0-SNAPSHOT</version>
    <name>product-service</name>
    <description>
        Product Service for Peddannat E-Commerce Platform.
        Handles product creation, product updates, category-based search,
        pagination, and soft delete functionality.
    </description>

    <!-- ===== GLOBAL PROPERTIES ===== -->
    <properties>
		<java.version>21</java.version>
		<spring-cloud.version>2025.0.0</spring-cloud.version>
	</properties>

	<dependencies>

        <!-- ===== WEB ===== -->
        <!-- Used to build REST APIs -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- ===== DATABASE ===== -->
        <!-- Used for JPA/Hibernate-based database operations -->
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

        <!-- ===== MYSQL DRIVER ===== -->
        <!-- MySQL connector used at runtime -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- ===== VALIDATION ===== -->
        <!-- Used for request validation annotations like @NotBlank, @DecimalMin -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- ===== SERVICE DISCOVERY ===== -->
        <!-- Registers product-service with Eureka -->
        <dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>

        <!-- ===== MONITORING ===== -->
        <!-- Exposes health and monitoring endpoints -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- ===== LOMBOK ===== -->
        <!-- Reduces boilerplate code like getters, setters, constructors -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

        <!-- ===== TESTING ===== -->
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

    <!-- ===== SPRING CLOUD BOM ===== -->
    <!-- Keeps Spring Cloud dependency versions compatible -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <!-- ===== BUILD ===== -->
    <build>
		<plugins>

            <!-- Builds executable Spring Boot jar -->
            <plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

            <!-- Compiler plugin for Java 21 + Lombok annotation processing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
